--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "atask",
+  "name": "polygala",
   "version": "0.1.0",
   "description": "Async task implemention in browser.",
   "main": "lib/index.js",
@@ -12,6 +12,7 @@
     "url": "git+https://github.com/yusangeng/atask.git"
   },
   "keywords": [
+    "asynchronous",
     "async",
     "task"
   ],
