--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polygala",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Tools for writing async function in browser.",
   "main": "lib/index.js",
   "scripts": {
@@ -32,6 +32,10 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "chai": "^4.1.0",
     "isparta": "^4.0.0",
