--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "polygala",
-  "version": "1.1.3",
+  "version": "2.0.0",
   "description": "Tools for writing async function in browser.",
   "main": "lib/index.js",
   "scripts": {
     "test": "babel-node node_modules/.bin/isparta cover node_modules/.bin/_mocha",
     "test-win": "mocha --compilers babel-core/register",
-    "transpile": "./node_modules/.bin/babel ./src -d ./lib --source-maps inline",
-    "prepublish": "npm test && npm run transpile"
+    "es5": "./node_modules/.bin/babel ./src -d ./lib --source-maps inline",
+    "prepublish": "npm test && npm run es5"
   },
   "repository": {
     "type": "git",
