--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
 language: node_js
 
 node_js:
-  - "9"
+  - "8"
+
+cache:
+  directories:
+    - node_modules
 
 before_script:
   - npm install
 
-script: npm test
+script: npm run ci
 
 notifications:
-  email: 
+  email: yusangeng@outlook.com
