暂时禁止发布前自动测试

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "nyc mocha --require ts-node/register test/*.spec.ts",
     "coverage": "nyc report --reporter=lcov",
     "es5": "rm -rf ./lib && tsc -p tsconfig.json",
-    "prepublishOnly": "npm run test && npm run es5",
+    "prepublishOnly": "npm run es5",
     "ci": "npm run test && npm run coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": {
